# DS_COVID

./: .env.example  .env.portable  .gitignore  ANALYSE_CODEBASE.md  ANALYSE_EXECUTIVE_SUMMARY.md  ANALYSE_NOTICE.md  ANALYSE_README.md  CONFIG.md  INSTALLATION.md  MANIFEST.in  README.md  example_env_usage.py  prepro.ipynb  pyproject.toml  requirements-colab.txt  requirements-interpretability.txt  requirements.txt  requirements_clean.txt  requirements_old.txt  setup.py  test_GPU.py  visulize.ipynb
.github/workflows/: pep8-check.yml
.streamlit/: config.toml
latex/: projet_covid.tex  rapport.tex
latex/sections/: 01_introduction.tex
logbook/: logbook_15_06_2025_20_58_moire_steven.md  logbook_18_06_2025_09_04_moire_steven.md  logbook_19_06_2025_16_31_moire_steven.md
notebooks/: 01_activate_env.ipynb  02_install_requirements.ipynb  03_update_requirements.ipynb  04-check_pep8.ipynb  04_apply_masks.ipynb  Advanced_ML_COVID_Classification.ipynb  C_01_Visu.ipynb  Interpretability_SHAP_GradCAM_Demo.ipynb  L_02_Generate_Masked_Images.ipynb  L_03_Data_Augmentation.ipynb  L_04_Revamp_main.ipynb  Visualisation.ipynb  main.ipynb
notebooks/OLD_Notebooks/Data_Process/: Data_Augmentation.ipynb  model_baseline.ipynb  prepro.ipynb  visulize.ipynb
notebooks/OLD_Notebooks/Init_Env/: 00_create_env.ipynb  05_check_python_version.ipynb
notebooks/OLD_Notebooks/data_augmentation/: main.ipynb
notebooks/data_augmentation/: _02_over_sampling.ipynb  main.ipynb  over_sampling.ipynb  select_folders.py  under_sampling.ipynb
notebooks/modelebaseline/: 01_modele_ml_baseline.py  cirine_model_ml_baseline.py  grid_search_params.json  word_generator.py
notebooks/modelebaseline/refactorisation/: main.py
rapports/: .~lock.rapport_classification_20250801_123314.docx#  rapport_classification_20250801_123314.docx  rapport_classification_20250912_091937.docx  rapport_classification_20250912_141825.docx  rapport_classification_20250912_153535.docx
reports/Iterations_rapports/: rapport_classification_20250910_125154.docx  rapport_classification_20250910_130111.docx  rapport_classification_20250912_094633.docx  rapport_classification_20250912_095114.docx  rapport_classification_20250912_112826.docx  rapport_classification_20250912_122624.docx
reports/explorationdata/: Template_rapport_exploration_donnees_18_06_2025_18_28.csv  Template_rapport_exploration_donnees_19_06_2025_13_38.csv  Template_rapport_exploration_donnees_19_06_2025_13_44.csv  Template_rapport_exploration_donnees_19_06_2025_13_57.csv  Template_rapport_exploration_donnees_20_06_2025_19_54.csv  Template_rapport_exploration_donnees_24_06_2025_20_05.csv  logs_18_06_2025_18_28.txt  logs_19_06_2025_13_20.txt  logs_19_06_2025_13_31.txt  logs_19_06_2025_13_38.txt  logs_19_06_2025_13_44.txt  logs_19_06_2025_13_57.txt  logs_19_06_2025_16_29.txt  logs_19_06_2025_16_57.txt  logs_19_06_2025_17_29.txt  logs_19_06_2025_17_37.txt  logs_20_06_2025_19_54.txt
sections/: 00_titlepage.tex
src/: __init__.py  config.py
src/ds_covid/: __init__.py  cli.py  config.py  features.py  models.py  notebook_utils.py  visualization.py
src/explorationdata/: rapport_img_template.py
src/explorationdata/model/: analysis_runner.py  image_analyzer.py  metadata_loader.py
src/explorationdata/view/: gui.py
src/features/: Features_Core.py  Features_Frontend.py  Features_Inspect_Backend.py  Vérifications_Back.py  Vérifications_Front.py  apply_masks.py  cat_test.py  failing_test.py
src/features/Augmentation/: Augmentation.py  Sampling.py
src/streamlit/: Launch_Streamlit.bat  Launch_Streamlit.ps1  app.py  utils.py
tests/: test_basic.py
(+100 files in other folders)
